# homomorph-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  check.ps1  check.sh  tarpaulin-report.html
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: u32.rs  u8.rs
examples/: new_struct.rs  simple_struct.rs  uint_add.rs  unbalanced_struct.rs
src/: cipher.rs  context.rs  lib.rs  main.rs  operations.rs  polynomial.rs  prelude.rs
src/impls/: mod.rs  numbers.rs
src/impls/numbers/: common.rs  int.rs  mod.rs  uint.rs
