[package]
name = "homomorph"
version = "1.0.0"
edition = "2021"
description = "A Rust implementation of an homomorphic encryption scheme"
license = "MIT"
repository = "https://github.com/mathisbot/homomorph-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "derive"] }
getrandom = { version = "0.2.15", default-features = false, features = ["rdrand"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[features]
default = []
custom_rand = ["getrandom/custom"]

[profile.release]
codegen-units = 1
lto = "thin"

[[bench]]
name = "u32"
harness = false