[package]
name = "homomorph"
version = "1.1.0"
edition = "2024"
description = "A Rust implementation of an homomorphic encryption scheme"
license = "MIT"
repository = "https://github.com/mathisbot/homomorph-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["alloc"] }
getrandom = "0.4.2"

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"

[features]
derive = ["bincode/derive"]

[profile.release]
codegen-units = 1
lto = "thin"

[[bench]]
name = "u32"
harness = false
[[bench]]
name = "u8"
harness = false

[[example]]
name = "simple_struct"
path = "examples/simple_struct.rs"
required-features = ["derive"]
[[example]]
name = "unbalanced_struct"
path = "examples/unbalanced_struct.rs"
required-features = ["derive"]
